Fixed alignment and spacing

--- a/Login.css
+++ b/Login.css
@@ -18,6 +18,8 @@ body {
     background-color: #f0f0f0;
   }
 .suff_box{
+    display: flex;
+    justify-content: center;
     background-color: rgba(33,33,33,0.5);
     border-radius: 15px;
     border-color: wheat;
@@ -78,4 +80,9 @@ select{
     margin-left: 1%;
     width: 98%;
     box-sizing: border-box;
+}
+.login_section{
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
