--- a/style.css
+++ b/style.css
@@ -29,9 +29,11 @@ body {
   width: 110px;
 }
 .navbar {
+  height: 100%;
+  width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   background-color: rgb(246, 73, 73);
   margin-top: 5px;
 }
@@ -91,6 +93,8 @@ body {
   background-color: #6b73e9;
 }
 .login{
+  width: 100%;
+  height: 100%;
   border: solid #ac6969 1px;
   border-radius: 5px 5px 0 0;
   display: flex;
@@ -104,6 +108,7 @@ body {
   width: 50%;
 }
 .suff_box{
+  padding: 0%;
   background-color: rgba(33,33,33,0.5);
   border-radius: 8px;
   border-color: wheat;
@@ -153,6 +158,8 @@ body {
   margin: 8px 0 0 90px;
 }
 .suff_box input{
+  display: flex;
+  justify-content: center;
   border-radius: 20px;
   margin-bottom: 10px;
   padding: 10px;
@@ -188,7 +195,10 @@ select{
 }
 .searchIcons{
   margin: 0 90px;
-
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
 
 }
 .searchIcons img{
@@ -237,4 +247,19 @@ select{
   height: 250px;
   width: 385px;
   content-visibility: hidden;
+}
+
+.loginsection{
+  height: 100%;
+  width: 40%;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+.msc{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-content: space-evenly;
+  justify-content: center;
 }
